--- a/src/components/ScheduleSpace.css
+++ b/src/components/ScheduleSpace.css
@@ -1,6 +1,7 @@
 #scheduleWrapper {
     height: 30vh;
     margin: 5%;
+    margin-bottom: 15%;
     padding: 2%;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
