--- a/src/components/workSpace/WorkSpace.css
+++ b/src/components/workSpace/WorkSpace.css
@@ -1,8 +1,11 @@
 #workWrapper {
-    height: 30vh;
+    height: 36vh;
     margin: 5%;
     padding: 2%;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     box-sizing: border-box; 
+}
+.workSpaceTitle{
+    margin-top: 0%;
 }
