--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: "inter-R";
+    src: url("fonts/Inter-Medium.ttf");
+  }
+@font-face {
+    font-family: "ArchitectD";
+    src: url("fonts/ArchitectsDaughter-Regular.ttf");
+  }
+@font-face {
+    font-family: "NotoSC";
+    src: url("fonts/NotoSansSC-Medium.ttf");
+  }
 .App {
     text-align: center;
 }
