--- a/src/components/scheduleSpace/ScheduleSpace.css
+++ b/src/components/scheduleSpace/ScheduleSpace.css
@@ -1,9 +1,4 @@
 #scheduleWrapper {
-    height: 36vh;
-    margin: 5%;
-    margin-bottom: 13%;
-    padding: 2%;
-    border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    height: calc(var(--vh, 1vh) * 50);
     box-sizing: border-box; 
 }
