--- a/src/pages/mainPage/MainPage.css
+++ b/src/pages/mainPage/MainPage.css
@@ -1,3 +1,8 @@
 .mainPage {
     text-align: center;
+    justify-content: center;
+    /* 세로 가운데 정렬 (column과 동일 방향) */
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
