feat: 캘린더 화면 날짜 마크 사이즈 제외 구현 완료

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
     font-family: "inter-R";
     src: url("fonts/Inter-Medium.ttf");
   }
+  @font-face {
+    font-family: "inter-B";
+    src: url("fonts/Inter-ExtraBold.ttf");
+  }
 @font-face {
     font-family: "ArchitectD";
     src: url("fonts/ArchitectsDaughter-Regular.ttf");
