--- a/src/components/scheduleSpace/ScheduleSpace.css
+++ b/src/components/scheduleSpace/ScheduleSpace.css
@@ -46,39 +46,43 @@
     height: 44px;
     margin-bottom: 1em;
   }
-  
+  .react-calendar__navigation__label > span { /* 헤드 부분 Month Year 텍스트 */
+    font-family: 'Inter-B';
+    font-size: 24px;
+    font-weight: 600;
+    text-shadow: 1px 2px 5px #b2b0b0;
+    color: black;
+    text-transform: uppercase;
+  }
   .react-calendar__navigation button {
     margin: 0;
     padding: 0;
-    height: 130%;
-    min-width: 44px;
+    height: 120%; /* 캘린더 요일(날짜) 영역과의 거리! 숫자 클수록 가까워짐 */
+    min-width: 60px; /* 월/년 버튼과의 거리! 숫자 클수록 가까워짐 */
     background: none;
-    font-family: 'Inter-R';
-    font-size: 20px;
-    font-weight: bolder;
-    text-shadow: 1px 3px 3px #b2b0b0;
     color: black;
+    font-size: 18px;
   }
   
   .react-calendar__navigation button:disabled {
-    background-color: #f0f0f0;
+    background-color: transparents;
   }
   
   .react-calendar__navigation button:enabled:hover,
-  .react-calendar__navigation button:enabled:focus {
-    background-color: #e6e6e6;
+  .react-calendar__navigation button:enabled:focus { /* 헤드 부분 버튼 커서 갖다 댔을 때 / 클릭했을 때 색 X */
+    background-color: transparents;
   }
   
   .react-calendar__month-view__weekdays {
     text-align: center;
-    text-transform: uppercase;
+    /* text-transform: uppercase; 요일 (MON -> Mon 표기) */
   }
   
-  .react-calendar__month-view__weekdays__weekday {
+  .react-calendar__month-view__weekdays__weekday { /* 요일 (Mon/Tue-) 폰트 */
     padding: 0.5em;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 0.7em;
-    color: #757575;
+    color: #818181;
   }
   
   .react-calendar__month-view__weekNumbers .react-calendar__tile {
@@ -100,7 +104,8 @@
   .react-calendar__year-view .react-calendar__tile,
   .react-calendar__decade-view .react-calendar__tile,
   .react-calendar__century-view .react-calendar__tile {
-    padding: 2em 0.5em;
+    padding: 1.8em 0.5em;
+    text-transform: uppercase;
   }
   
   .react-calendar__tile { /* 월-금 날짜 숫자 */
@@ -108,59 +113,65 @@
     padding: 10px 6.6667px;
     background: none;
     text-align: center;
-    line-height: 16px;
+    line-height: 20px; /* 캘린더 날짜들 간 위아래 간격 */
     color: #4b4a4a;
-    font-weight: 600;
-    font-size: 0.75em;
+    font-weight: 400;
+    font-size: 13px;
   }
-  
   .react-calendar__tile:disabled {
     background-color: #f0f0f0;
   }
   
   .react-calendar__tile:enabled:hover,
-  .react-calendar__tile:enabled:focus {
+  .react-calendar__tile:enabled:focus { /* 모든 날짜(Month 포함) 커서 갖다 댔을 때 / 클릭했을 때 */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #e6e6e6;
     border-radius: 50%;
-    width:50px;
-    height: 50px;
+    /* width:50%; */
+    height: 50%; /* 숫자텍스트랑 백그라운드(원)이랑 같이 묶여있음 */
   }
   
-  .react-calendar__tile--now:defined{
-    color: #4b4a4a;
-    background: #ffff76;
+  .react-calendar__tile--now:defined{ /* 오늘 날짜 표시 */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background: #000000;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    /* width: 20%; width 값에 따라 모양이 바뀌지 않음 */
+    height: 50%;
+    background-size: 50%;
   }
   
-  /* .react-calendar__tile--now:enabled:hover,
+  .react-calendar__tile--now:enabled:hover, /* 오늘 날짜에 커서 갖다 댔을 때 / 클릭했을 때 */
   .react-calendar__tile--now:enabled:focus {
-    background: #ffffa9;
-  } */
+    background: #3d3d3d;
+  }
   
   .react-calendar__tile--hasActive {
-    background: #76baff;
+    background: #3d3d3d;
   }
   
-  .react-calendar__tile--hasActive:enabled:hover,
+  .react-calendar__tile--hasActive:enabled:hover, /* Year-view에서 오늘 날짜 속한 Month에 커서 갖다 댔을 때 / 클릭했을 떄 */
   .react-calendar__tile--hasActive:enabled:focus {
-    background: #a9d4ff;
+    background: #3d3d3d;
   }
   
   .react-calendar__tile--active {
-    background: #006edc;
+    background: #3d3d3d;
     color: white;
   }
   
-  .react-calendar__tile--active:enabled:hover,
-  .react-calendar__tile--active:enabled:focus {
-    background: #1087ff;
+  .react-calendar__tile--active:enabled:hover { /* 날짜 타일에 커서 올려놓을 경우 */
+
+  } 
+  .react-calendar__tile--active:enabled:focus { /* 날짜 클릭시 해당 날짜 타일색 변경 */
+    background: white;
+    color: #4b4a4a;
   }
-  
-  .react-calendar--selectRange .react-calendar__tile--hover {
-    background-color: #e6e6e6;
-  }
+
   .dot {
     height: 8px;
     width: 8px;
