todoItem 추가 기능 구현

--- a/src/components/workSpace/ToDoList.css
+++ b/src/components/workSpace/ToDoList.css
@@ -1,3 +1,10 @@
+input {
+    border: none;
+    font-size: medium;
+}
+input:focus {
+    outline: none;
+}
 #diaryImg {
     width: 50px;
     position: absolute;
@@ -5,7 +12,7 @@
     transform: translate(-50%, -30%);
 }
 #buttonImg{
-    width: 35px;
+    width: 50px;
     position: absolute;
     bottom: 5%;
     right: 10%;
@@ -18,4 +25,8 @@
     min-height: calc(var(--vh, 1vh) * 100);
     position: relative;
     overflow: auto;
+}
+.itemImage {
+    margin: 7px;
+    width: 30px;
 }
