--- a/src/components/scheduleSpace/ScheduleSpace.css
+++ b/src/components/scheduleSpace/ScheduleSpace.css
@@ -50,7 +50,7 @@
     font-family: 'Inter-B';
     font-size: 24px;
     font-weight: 600;
-    text-shadow: 1px 2px 5px #b2b0b0;
+    text-shadow: -0.5px 2.5px 4px #c0bdbdcf;
     color: black;
     text-transform: uppercase;
   }
@@ -80,8 +80,8 @@
   
   .react-calendar__month-view__weekdays__weekday { /* 요일 (Mon/Tue-) 폰트 */
     padding: 0.5em;
-    font-weight: 500;
-    font-size: 0.7em;
+    font-weight: 600;
+    font-size: 0.6em;
     color: #818181;
   }
   
@@ -104,7 +104,7 @@
   .react-calendar__year-view .react-calendar__tile,
   .react-calendar__decade-view .react-calendar__tile,
   .react-calendar__century-view .react-calendar__tile {
-    padding: 1.8em 0.5em;
+    padding: 1.6em 0.5em;
     text-transform: uppercase;
   }
   
@@ -113,7 +113,7 @@
     padding: 10px 6.6667px;
     background: none;
     text-align: center;
-    line-height: 20px; /* 캘린더 날짜들 간 위아래 간격 */
+    line-height: 24px; /* 캘린더 날짜들 간 위아래 간격 */
     color: #4b4a4a;
     font-weight: 400;
     font-size: 13px;
@@ -127,15 +127,16 @@
     background-color: #f0f0f0;
   }
   
-  .react-calendar__tile:enabled:hover,
-  .react-calendar__tile:enabled:focus { /* 모든 날짜(Month 포함) 커서 갖다 댔을 때 / 클릭했을 때 */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #e6e6e6;
-    border-radius: 50%;
-    width: 20px;
-    height: 50%; /* 숫자텍스트랑 백그라운드(원)이랑 같이 묶여있음 */
+  .react-calendar__tile:enabled:hover, 
+  .react-calendar__tile:enabled:focus { /*  모든 날짜(Month 포함) 커서 갖다 댔을 때 / 클릭했을 때 */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #e6e6e6;
+      border-radius: 50%;
+      width: 50%;
+      height: 50%;
+      /* 숫자텍스트랑 백그라운드(원)이랑 같이 묶여있음 */
   }
   
   .react-calendar__tile--now:defined{ /* 오늘 날짜 표시 */
@@ -145,9 +146,8 @@
     color: white;
     background: #000000;
     border-radius: 50%;
-    width: 20px; /* width 값에 따라 모양이 바뀌지 않음 */
+    width: 50%; /* width 값에 따라 모양이 바뀌지 않음 */
     height: 50%;
-    background-size: 50%;
   }
   
   .react-calendar__tile--now:enabled:hover, /* 오늘 날짜에 커서 갖다 댔을 때 / 클릭했을 때 */
@@ -166,14 +166,13 @@
   
   .react-calendar__tile--active {
     background: #3d3d3d;
-    color: white;
   }
   
   .react-calendar__tile--active:enabled:hover { /* 날짜 타일에 커서 올려놓을 경우 */
 
   } 
   .react-calendar__tile--active:enabled:focus { /* 날짜 클릭시 해당 날짜 타일색 변경 */
-    background: white;
+    background: transparent;
     color: #4b4a4a;
   }
 
