--- a/src/components/scheduleSpace/ScheduleSpace.css
+++ b/src/components/scheduleSpace/ScheduleSpace.css
@@ -136,7 +136,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: #e6e6e6;
+      background-color: #e0dfdfcc;
       /* 숫자텍스트랑 백그라운드(원)이랑 같이 묶여있음 */
   }
   
