--- a/src/components/workSpace/Diary.css
+++ b/src/components/workSpace/Diary.css
@@ -53,7 +53,13 @@ textarea:focus{
 }
 .diaryEdit{
     min-height: calc(var(--vh, 1vh) * 100);
+    width: 100vw;
     overflow: auto;
     background-image: url(/src/icons/종이질감2.png);
     background-repeat: repeat;
+}
+.diaryImages {
+    margin-left: 10px;
+    margin-right: 10px;
+    
 }
