--- a/src/components/workSpace/ToMyGoal.css
+++ b/src/components/workSpace/ToMyGoal.css
@@ -15,10 +15,14 @@
     transform: translate(-50%, -30%);
 }
 #buttonImg{
-    width: 50px;
+    width: 40px;
     position: absolute;
-    bottom: 5%;
+    top: 10%;
     right: 5%;
+}
+#plusImage {
+    margin-top: 0;
+    width: 40px;
 }
 .trashImage {
     margin: 7px;
