--- a/src/components/workSpace/ToMyGoal.css
+++ b/src/components/workSpace/ToMyGoal.css
@@ -21,7 +21,7 @@
     right: 5%;
 }
 #plusImage {
-    margin-top: 0;
+    margin-top: 5%;
     width: 40px;
 }
 .trashImage {
@@ -57,10 +57,18 @@
     padding-inline-end: 5%;
     /* background-color: red; */
 }
+#mainGoal {
+    font-weight: normal;
+    font-size: x-large;
+}
 #detailGoal {
     align-items: flex-start;
     display: flex;
     flex-direction: row;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: normal;
+    font-size: x-large;
     /* background-color: blue; */
 }
 .mainGoal-input{
@@ -76,7 +84,7 @@
 }
 .detailGoal-input {
     background-color: transparent;
-    text-align: center;
+    /* text-align: center; */
     font-family: "ArchitectD";
     font-weight: 100;
     font-size: 20px;
