--- a/src/components/workSpace/ToDoList.css
+++ b/src/components/workSpace/ToDoList.css
@@ -25,6 +25,7 @@ input:focus {
 .toDoView{
     height: calc(var(--vh, 1vh) * 50);
     position: relative;
+    overflow-y: auto;
 }
 .toDoEdit{
     min-height: calc(var(--vh, 1vh) * 100);
