--- a/src/components/workSpace/ToMyGoal.css
+++ b/src/components/workSpace/ToMyGoal.css
@@ -42,7 +42,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: red; */
+    text-align: center;
+    background-color: red;
 }
 .mainGoal,
 .dgoalList {
@@ -52,7 +53,7 @@
     flex-direction: row;
     margin-bottom: 0;
     max-width: 80%;
-    /* background-color: blue; */
+    background-color: blue;
     /* width: 100vw; */
 }
 #goalId {
@@ -82,7 +83,7 @@
     text-align: center;
     width: 80%;
     padding-bottom: 0;
-    background-color: white;
+    /* background-color: white; */
 }
 .detailGoal-input {
     background-color: transparent;
