--- a/src/components/workSpace/ToDoList.css
+++ b/src/components/workSpace/ToDoList.css
@@ -1,4 +1,5 @@
 input[type="text"] {
+    margin-top: 8px;
     border: none;
     font-size: medium;
 }
@@ -6,9 +7,8 @@ input[type="text"]:focus {
     outline: none;
 }
 input[type="checkbox"] {
-    margin: 1%;
-    width: 1.5%;
-    
+    width: 15px;
+    margin: 10px;
 }
 #diaryImg {
     width: 50px;
@@ -42,4 +42,10 @@ input[type="checkbox"] {
     margin-top: 3px;
     width: 30px;
     height: 30px;
+}
+#todohorizon{
+    border-color: black;
+    border-width: 0.8px;
+    margin-top: 0;
+    width: 100%;
 }
