--- a/src/components/workSpace/ToDoList.css
+++ b/src/components/workSpace/ToDoList.css
@@ -1,11 +1,3 @@
-input[type="text"] {
-    margin-top: 8px;
-    border: none;
-    font-size: medium;
-}
-input[type="text"]:focus {
-    outline: none;
-}
 input[type="checkbox"] {
     width: 15px;
     margin: 10px;
@@ -26,6 +18,18 @@ input[type="checkbox"] {
     width: 40px;
     position: relative;
     margin-top: 10%;
+}
+.msgText[type="text"] {
+    margin-top: 8px;
+    border: none;
+    font-size: medium;
+}
+.msgText:focus {
+    outline: none;
+}
+.timeNum {
+    width: 50px;
+    text-align: center;
 }
 .toDoView{
     height: calc(var(--vh, 1vh) * 50);
