--- a/src/components/workSpace/ToMyGoal.css
+++ b/src/components/workSpace/ToMyGoal.css
@@ -119,7 +119,7 @@
 #colorbox {
     font-size: 30px;
     margin-right: 2%;
-    background-color: aqua;
+    /* background-color: aqua; */
     border-radius: 50%;
 }
 #mainGoalRead {
