--- a/src/components/workSpace/Diary.css
+++ b/src/components/workSpace/Diary.css
@@ -48,7 +48,7 @@ textarea:focus{
     transform: translate(-50%, -30%);
 }
 .diaryView{
-    height: 100%;
+    height: calc(var(--vh, 1vh) * 50);
     position: relative;
     overflow-y: auto;
 }
