--- a/src/pages/loginPage/LoginPage.css
+++ b/src/pages/loginPage/LoginPage.css
@@ -34,20 +34,28 @@
     background-color:transparent; 
     border-radius: 0;
     font-family: "ArchitectD";
-    font-weight: 400;
+    font-weight: 500;
     font-size: medium;
-    margin-bottom: 0;
+    margin-bottom: 3px;
+    width: 170px;
+}
+#id-input, #pwd-input {
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
 }
 .pwd-input {
     text-align: center;
     border: none;
     outline: none;
-    background-color:transparent; 
+    background-color: transparent; 
     border-radius: 0;
     font-family: "ArchitectD";
-    font-weight: 400;
-    font-size: medium;
-    margin-bottom: 5px;
+    font-weight: 500;
+    font-size: large;
+    margin-bottom: 0;
+    width: 170px;
 }
 .loginButton {
     border: none;
@@ -74,6 +82,6 @@
     border-color: black;
     border-width: 0.8px;
     margin-top: 0;
-    width: 225px;
+    width: 180px;
     margin-bottom: 0;
 }
