--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,26 @@
 @font-face {
     font-family: "inter-R";
-    src: url("fonts/Inter-Medium.ttf");
+    src: url("assets/fonts/Inter-Medium.ttf");
   }
   @font-face {
     font-family: "inter-B";
-    src: url("fonts/Inter-ExtraBold.ttf");
+    src: url("assets/fonts/Inter-ExtraBold.ttf");
   }
 @font-face {
     font-family: "ArchitectD";
-    src: url("fonts/ArchitectsDaughter-Regular.ttf");
+    src: url("assets/fonts/ArchitectsDaughter-Regular.ttf");
   }
 @font-face {
     font-family: "NotoSC";
-    src: url("fonts/NotoSansSC-Medium.ttf");
+    src: url("assets/fonts/NotoSansSC-Medium.ttf");
   }
 @font-face {
   font-family: "kkum";
-  src: url(fonts/cachildren\ kkum.ttf);
+  src: url(assets/fonts/cachildren\ kkum.ttf);
 }
 @font-face {
   font-family: "modu";
-  src: url(fonts/cachildren\ modu.ttf);
+  src: url(assets/fonts/cachildren\ modu.ttf);
 }
 .App {
     text-align: center;
