feat: 목표페이지 디자인 수정

--- a/src/pages/MainPage/WorkSpace/Goal/index.css
+++ b/src/pages/MainPage/WorkSpace/Goal/index.css
@@ -75,6 +75,7 @@
     /* background-color: blue; */
 }
 .mainGoal-input{
+    border: none;
     background-color: transparent;
     font-family: "modu";
     font-weight: bold;
@@ -85,6 +86,7 @@
     /* background-color: white; */
 }
 .detailGoal-input {
+    border: none;
     background-color: transparent;
     /* text-align: center; */
     font-family: "modu";
