--- a/src/pages/MainPage/index.css
+++ b/src/pages/MainPage/index.css
@@ -6,3 +6,9 @@
     display: flex;
     flex-direction: column;
 }
+#logout {
+    margin-left: auto;
+    margin-right: 3%;
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
