Add: Yeongdeok Sea 폰트 추가

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   font-family: "modu";
   src: url(assets/fonts/cachildren\ modu.ttf);
 }
+@font-face {
+  font-family: "ydSea";
+  src: url(assets/fonts/Yeongdeok\ Sea.ttf);
+}
 .App {
     text-align: center;
 }
