Design: 로그인 페이지 비밀번호 입력값 폰트 굵기 및 크기 수정

--- a/src/pages/loginPage/index.css
+++ b/src/pages/loginPage/index.css
@@ -52,8 +52,8 @@
     background-color: transparent; 
     border-radius: 0;
     font-family: "ydSea";
-    font-weight: 500;
-    font-size: medium;
+    font-weight: 800;
+    font-size: large;
     margin-bottom: 0;
     width: 170px;
 }
