--- a/src/pages/MainPage/index.css
+++ b/src/pages/MainPage/index.css
@@ -1,10 +1,10 @@
 .mainPage {
     text-align: center;
     justify-content: center;
-    /* 세로 가운데 정렬 (column과 동일 방향) */
     align-items: center;
     display: flex;
     flex-direction: column;
+    height: calc(var(--vh, 1vh) * 106);
     overflow: hidden;
 }
 #logout {
