--- a/src/pages/MainPage/WorkSpace/Diary/index.css
+++ b/src/pages/MainPage/WorkSpace/Diary/index.css
@@ -8,8 +8,11 @@ textarea {
    min-height: 12em;
    background-color: transparent;
    border: none;
+   font-family: "modu", "ArchitectD";
+    font-weight: bold;
+    /* font-size: 22px; */
    font-size: x-large;
-   line-height: 2;
+   line-height: 1.3;
 }
 textarea:focus{
     outline: none;
@@ -51,6 +54,8 @@ textarea:focus{
     height: calc(var(--vh, 1vh) * 50);
     position: relative;
     overflow-y: auto;
+    background-image: url(assets/icons/종이질감2.png);
+    background-repeat: repeat;
 }
 .diaryView::-webkit-scrollbar {
     width: 0;
@@ -62,7 +67,7 @@ textarea:focus{
 
 }
 .diaryEdit{
-    min-height: calc(var(--vh, 1vh) * 100);
+    height: calc(var(--vh, 1vh) * 100);
     width: 100vw;
     overflow: auto;
     background-image: url(assets/icons/종이질감2.png);
