--- a/src/pages/MainPage/index.css
+++ b/src/pages/MainPage/index.css
@@ -1,6 +1,6 @@
 .mainPage {
     text-align: center;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -11,5 +11,5 @@
     margin-left: auto;
     margin-right: 3%;
     margin-top: 3%;
-    margin-bottom: 5%;
+    margin-bottom: 6%;
 }
